fix: overflow globe map

--- a/wp-content/themes/unw/styles/pages/powered-by-asu/pba-network.scss
+++ b/wp-content/themes/unw/styles/pages/powered-by-asu/pba-network.scss
@@ -56,6 +56,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 
 .pba-network__globe-container {
